# genesis-ai-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATABASE_SETUP.md  Dockerfile  FASTMCP_CLIENT_HEADERS_GUIDE.md  MCP_INTEGRATION_GUIDE.md  Makefile  README.md  docker-compose.yml  logging_config.yaml  pyproject.toml  run.py  start.bat  stop.bat
apps/mcp_server/: __init__.py  config.py  main.py
apps/mcp_server/v1/: __init__.py
apps/mcp_server/v1/routers/: __init__.py  tools.py
apps/mcp_server/v1/tools/: __init__.py  basic.py
apps/rest_api/: main.py
apps/rest_api/v1/routers/: __init__.py  _debug_router.py  _debug_router_fixed.py  llm_router.py  mcp_router.py  mcp_router_fixed.py
config/: default.yaml  development.yaml  production.yaml
docs/: API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  GETTING_STARTED.md  README.md  comparison.md  faq.md  tutorial.md
scripts/: MCP_TROUBLESHOOTING.md  backup_temp_files.py  check_db.py  check_db_fixed.py  clean_project.py  clean_root_directory.py  create_database.py  create_genesis_user.py  init_db.py  init_db_fixed.py  init_db_simple.py  init_sample.py  init_sample_fixed.py  initialize_complete.py  mcp_start.bat  mcp_start.ps1  mcp_start.sh  mcp_start_debug.bat  mcp_start_new.bat  mcp_stop.bat  mcp_stop.sh  mcp_test.ps1  setup_db.py
sql/: 001_initial_schema.sql  002_sample_data.sql  README.md
src/genesis/ai_tools/: __init__.py  general_tools.py  registry.py
src/genesis/ai_tools/tools/: math_tools.py
src/genesis/core/: container.py  logging_config.py  middleware.py  settings.py  simple_container.py  simple_container_fixed.py  structured_logging.py
src/genesis/infrastructure/database/: __init__.py  manager.py  models.py  session_service.py
src/genesis/infrastructure/llm/: __init__.py  interface.py  qwen_service.py
src/genesis/infrastructure/llm/providers/: __init__.py  openai_provider.py  qwen_provider.py
